# game-python

./: .bashrc  .coverage  .gitignore  PR_CHANGES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: validate-new-plugin-metadata.yml
docs/: configuration.md  error-handling.md  getting_started.md  sdk_guide.md  sdk_overview.md  testing.md  testing_guide.md
docs/api/: agent.md  worker.md  worker_config.md
docs/contributors/bugfix/Gordey007/01_imports/: errors.md  fix.md
docs/contributors/bugfix/Gordey007/02_exemple_4_X/: errors.md  fix.md
docs/examples/: weather_agent.md
examples/: example_weather_agent.py  example_weather_worker.py  test_sdk.py
examples/game/: agentv2.py  example_chaos_agent_states.py  example_twitter_reaction_module.py  test_agent.py  test_seraph_agent.py  test_worker.py
examples/hosted_agent/: example-custom.py  example-twitter.py
examples/stateofmika/: example_som.py
plugins/acp/: README.md  pyproject.toml
plugins/acp/acp_plugin_gamesdk/: acp_client.py  acp_plugin.py  acp_token.py  interface.py  utils.py
plugins/acp/examples/: test_buyer.py  test_seller.py
plugins/acp/examples/agentic/: README.md
plugins/acp/examples/reactive/: README.md  buyer.py  seller.py
plugins/acp/tools/: reduce_agent_state.py
plugins/audiogen/: README.md  pyproject.toml
plugins/audiogen/audiogen_game_sdk/: audiogen_plugin.py
plugins/audiogen/examples/: example-worker.py
plugins/cdp/: cdp_plugin.py
plugins/compass-api/: README.md  pyproject.toml
plugins/compass-api/compasslabs_api_plugin_gamesdk/: compasslabs_plugin.py
plugins/compass-api/examples/: example_agent.py  example_workers.py
plugins/dappier/: dappier_plugin.py  example-agent.py  example-worker.py  pyproject.toml
plugins/new_plugin/: plugin_metadata.yml
plugins/nillion/: README.md  nillion_test.py  plugin_metadata.yml  pyproject.toml
plugins/nillion/nillion_game_sdk/: nillion_plugin.py
plugins/onchain_actions/: README.md
plugins/opacity/: README.md  pyproject.toml
plugins/opacity/examples/: opacity_agent.py  opacity_worker.py
plugins/opacity/opacity_game_sdk/: opacity_plugin.py
plugins/stateofmika/functions/: router.py
plugins/tee/: README.md  plugin_metadata.yml  pyproject.toml  test_tee.py
plugins/tee/tee_plugin_gamesdk/: tee_plugin.py
plugins/telegram/: pyproject.toml
plugins/telegram/telegram_plugin_gamesdk/: telegram_plugin.py
plugins/twitter/: README.md  test_twitter.py
plugins/twitter/examples/: .env.example
plugins/twitter/twitter_plugin_gamesdk/: game_twitter_plugin.py  twitter_plugin.py
src/game_sdk/: __init__.py  version.py
src/game_sdk/game/: agent.py  api.py  api_client.py  api_v2.py  config.py  custom_types.py  exceptions.py  utils.py  worker.py  worker_config.py
src/game_sdk/game/agentv2/: autonomous_agent.py  autonomous_agent_client.py
src/game_sdk/game/v2/worker/: agent.py  client.py
src/game_sdk/hosted_game/: README.md  agent.py  sdk.py
src/game_sdk/plugins/stateofmika/functions/: router.py
src/game_sdk/plugins/stateofmika/types/: models.py
tests/: conftest.py  test_api_client.py  test_config.py  test_sdk.py  test_utils.py  test_weather_worker.py  test_worker.py
tests/game/: test_agent.py  test_api.py  test_api_client.py  test_api_v2.py  test_config.py  test_custom_types.py  test_utils.py  test_worker.py
