[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opacity-game-sdk"
version = "0.1.0"
description = "Opacity plugin for Game Framework - Verify AI inference proofs"
readme = "README.md"
authors = [
    { name = "BitMind" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["opacity", "ai", "verification", "proof", "game-framework"]
dependencies = [
    "game-sdk>=0.1.0",
    "tweepy>=4.12.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=opacity_game_sdk"
testpaths = [
    "tests",
]